# cto-golden-repo

./: .editorconfig  .env.example  .gitignore  .tool-versions  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  DECISIONS.md  LICENCE.md  LICENSE.md  Makefile  README.md  ROADMAP.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  README.md  ci.yml  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md  security-issue.md
.github/policies/: required-paths.yml
.github/workflows/: backend-go.yml  backend-node.yml  contract-tests.yml  deploy.yml  docs.yml  frontend-next.yml  infrastructure-terraform.yml  monitoring-stack.yml  policy.yml  security-suite.yml  supply-chain.yml
apps/backend/: README.md
apps/backend/rust-service/: Cargo.toml  Dockerfile  README.md
apps/frontend/: .dockerignore  .gitleaks.toml  Dockerfile  README.md  (+5 more)
contracts/: README.md
docs/: README.md  mkdocs.yml
governance/: README.md  architecture-principles.md  data-classification.md  data-retention-policy.md  dr-targets.md  finops-policy.md  ownership.md  repo-constraints.md  risk-matrix.md  tech-radar.md
ops-runbooks/: README.md  disaster-recovery.md  incident-response.md  rollback-procedure.md  security-incident.md
platform/: README.md
product/: README.md  capability-mapping.md  north-star-metrics.md  product-tech-vision-map.md
scripts/: README.md  backup-database.sh  ci_cd_application_script.sh  db-migrate.sh  deploy-infrastructure.sh  deploy-observability.sh  deploy-staging.sh  restore-database.sh  rollback.sh  setup-local-env.sh
(+162 files in other folders)
