[package]
name = "rust-service"
version = "0.1.0"
edition = "2021"
description = "Optional Rust service for critical paths"
license = "UNLICENSED"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }